new look initial commit

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,6 +1,6 @@
 <hgroup>
-  <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
-  {% if site.subtitle %}
-    <h2>{{ site.subtitle }}</h2>
-  {% endif %}
+	<section id="titles">
+	  <h1 id="site_title" style="font-family: 'Fjalla One', 'Helvetica Neue', Arial, sans-serif;font-weight: bold;"><a href="{{ site.url }}" title="{{ site.title }}">{{ site.title }}</a></h1>
+	  <h3 id="site_subtitle">{{ site.subtitle }}</h3>
+	</section>
 </hgroup>
