--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -9,8 +9,7 @@
       <p class="meta">
         {% include post/date.html %}{{ time }}
         {% if site.disqus_short_name and page.comments != false and post.comments != false and site.disqus_show_comment_count == true %}
-           | <a href="{% if index %}{{ post.url }}{% else %}{{ page.url }}{% endif %}#disqus_thread"
-             data-disqus-identifier="{% if index %}{{ site.url }}{{ post.url }}{% else %}{{ site.url }}{{ page.url }}{% endif %}">Comments</a>
+         | <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#disqus_thread">Comments</a>
         {% endif %}
         {% include post/categories.html %}
       </p>
