changes & new post

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -47,7 +47,7 @@ img#portrait {
 
 
     html {
-      background: #262C33 url("../images/background.png");
+      background: #262C33 url("../images/background5.jpg");
       background-attachment: fixed;
     }
 
